# frigate-remote-hailo-worker

./: .gitignore  Dockerfile  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: test.yml
deploy/: hailo-detectord.env.example  hailo-detectord.service  hailo-greenhouse-load.service  hailo-greenhouse-load.timer  hailo-greenhouse-unload.service  hailo-greenhouse-unload.timer  install-frigate-adapter.sh  install-rpi5-systemd.sh
docs/: ARCHITECTURE.md  KNOWN_ISSUES.md  ROADMAP.md  api.md  camera-level-testing.md  frigate-adapter.md  greenhouse-batch-scheduling.md  hailo-backend.md
examples/: frigate-hp400.yml  rpi5-docker-compose.yml
src/hailo_detectord/: __init__.py  app.py  config.py  face_recognition.py  greenhouse.py  image.py  main.py  model_manager.py  models.py  service.py  version.py
src/hailo_detectord/backends/: __init__.py  base.py  hailo.py  mock.py
tests/: test_app.py  test_hailo_integration.py
tools/: bench_service_interleaving.py  create_frigate_remote_hailo_config.py  greenhouse_batch_window.py  greenhouse_model_control.py  hailo_multi_model_benchmark.py  probe_camera_level_detector.py  smoke_hailo_detectord.py
