[project]
name = "frigate-remote-hailo-worker"
version = "0.1.0"
description = "Prototype remote Hailo8 inference worker for Frigate over HTTP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "numpy>=1.24,<2",
  "opencv-python-headless>=4.9,<4.10",
  "pydantic-settings>=2.6",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27",
  "pytest>=8.2",
]

[project.scripts]
hailo-detectord = "hailo_detectord.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
